search enginge urls to use %s

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Copyright (C) 2024 Richard Hao Cao
   var tabs;
   var engines = {};
   var mapKeys = {};
-  var defaultSE = "https://www.bing.com/search?q=";
+  var defaultSE = "https://www.bing.com/search?q=%s";
   let lastKeys;
   let lastKeys_millis = 0;
 
@@ -210,13 +210,16 @@ Copyright (C) 2024 Richard Hao Cao
   }
   function getQ(){return document.forms[0].q.value;}
   function bang(query, iSpace){
+    let se=defaultSE;
     if(iSpace>0){
       let name = query.slice(0,iSpace);
       let engine = engines[name];
-      if(engine)
-        return engine+query.substring(iSpace+1);
+      if(engine){
+        se = engine;
+        query = query.substring(iSpace+1);
+      }
     }
-    return defaultSE+query;
+    return se.replace('%s',query);
   }
   function coloncommand(q){
     document.title = q;
