--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ Copyright (C) 2024 Richard Hao Cao
   var tabs;
   var engines = {};
   var mapKeys = {};
+  var closedUrls = [];
   var defaultSE = "https://www.bing.com/search?q=%s";
   let lastKeys;
   let lastKeys_millis = 0;
@@ -108,6 +109,7 @@ Copyright (C) 2024 Richard Hao Cao
     let nTabs = tabs.children.length;
     if(nTabs<2) return "";//no remain tab
     let tab = tabs.children[iTab];
+    closedUrls.push(tab.getURL());
     if(document.activeElement == tab) tab.blur();
     tabs.removeChild(tab);
     nTabs--;
