--- a/index.html
+++ b/index.html
@@ -306,24 +306,24 @@ Copyright (C) 2024 Richard Hao Cao
     }
     var url=q;
     do {
-      if(q.length>7){
+      if(q.length>12){
         let c6 = q.charCodeAt(6);
-        if(47==c6){// '/'
+        if(47===c6){// '/'
           let c5 = q.charCodeAt(5);
-          if(47==c5 && 58==q.charCodeAt(4))//http/file urls
+          if(47===c5 && 58===q.charCodeAt(4))//http/file urls
             break;
-          if(58==c5 && 47==q.charCodeAt(7))//https://
+          if(58===c5 && 47===q.charCodeAt(7))//https://
             break;
         }else if(q.startsWith("javascript:")){
           tabs.children[iTab].executeJavaScript(q.substring(11),false);
           return;
-        }
+        }else if(q.startsWith("view-source:")) break;
+        else if(q.startsWith("data:")) break;
       }
       let iS = q.indexOf(' ');
       if(iS<0){
-        if(q.length>5){
-          if(58==q.charCodeAt(5))
-            break;
+        if(q.length>5 && 58===q.charCodeAt(5)){// about:
+          break;
         }
         if(q.indexOf('.')>0){
           url = 'https://'+q;
