--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Copyright (C) 2024 Richard Hao Cao
   function getQ(){return document.forms[0].q.value;}
   function bang(query, iSpace){
     let se=defaultSE;
-    if(iSpace>0){
+    {
       let name = query.slice(0,iSpace);
       let engine = engines[name];
       if(engine){
@@ -329,6 +329,8 @@ Copyright (C) 2024 Richard Hao Cao
           url = 'https://'+q;
           break;
         }
+        url = defaultSE.replace('%s',q);
+        break;
       }
       url = bang(q, iS);
     }while(false);
