--- a/index.html
+++ b/index.html
@@ -385,20 +385,18 @@ You should have received a copy of the GNU General Public License along with thi
       }
     }
     var url=q;
+    NOREC: do{
     do {
       if(q.length>12){
         let c6 = q.charCodeAt(6);
         if(47===c6){// '/'
           let c5 = q.charCodeAt(5);
           if(47===c5 && 58===q.charCodeAt(4))//http/file urls
-            break;
+            break NOREC;
           if(58===c5 && 47===q.charCodeAt(7))//https://
-            break;
-        }else if(q.startsWith("javascript:")){
-          tabs.children[iTab].executeJavaScript(q.substring(11),false);
-          recQueryHistory(q);
-          return;
-        }else if(q.startsWith("view-source:")) break;
+            break NOREC;
+        }else if(q.startsWith("javascript:")) break;
+        else if(q.startsWith("view-source:")) break;
         else if(q.startsWith("data:")) break;
       }
       let iS = q.indexOf(' ');
@@ -408,14 +406,14 @@ You should have received a copy of the GNU General Public License along with thi
         }
         if(q.indexOf('.')>0){
           url = 'https://'+q;
-          break;
+          break NOREC;
         }
         url = defaultSE.replace('%s',q);
-        recQueryHistory(q);
         break;
       }
       url = bang(q, iS);
-      recQueryHistory(q);
+    }while(false);
+    recQueryHistory(q);
     }while(false);
     tabs.children[iTab].src=url;
   }
