--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ You should have received a copy of the GNU General Public License along with thi
   }
   .autocomplete-items div {
     cursor: pointer;
+    background-color: #fff;
   }
   .autocomplete-items div:hover {
     background-color: #e9e9e9;
@@ -69,6 +70,9 @@ You should have received a copy of the GNU General Public License along with thi
   var bHistory = false;
   var bQueryHistory = false;
   var autocMode = 0; //0 for substring, 1 for startsWith
+  const JSPREFIX_LOAD = "{let d=document;function _loadJs(u){var a=d.createElement('script');a.type='text/javascript';a.src=u;d.body.appendChild(a)}";
+  const BML_md = JSPREFIX_LOAD + "_loadJs('https://cdn.jsdelivr.net/npm/marked@12.0.2/marked.min.js');let b=d.body;b.innerHTML=marked.parse(b.textContent)}";
+
   let lastKeys;
   let lastKeys_millis = 0;
 
@@ -132,8 +136,14 @@ You should have received a copy of the GNU General Public License along with thi
     tabs.children[iTab].classList.add('curWV');
   }
   function cbFinishLoad(e){
-    if(!bHistory) return;
     let tab = e.target;
+    let js = tab.dataset.jsonce;
+    if(js){
+      console.log(js);
+      tab.dataset.jsonce = null;
+      tab.executeJavaScript(js,false);
+    }
+    if(!bHistory) return;
     let histItem = tab.getTitle()+" "+tab.getURL()+"\n";
     fs.appendFile(historyFile, histItem, (err) => {});
   }
@@ -211,9 +221,10 @@ You should have received a copy of the GNU General Public License along with thi
       return;
     }
     SCROLL: do {
-    let h;
+    let h = -32;
     switch(key){
     case " ":
+      if(inputE === document.activeElement) return;
       if(e.shiftKey){
         h = -3*document.documentElement.clientHeight/4;
         break;
@@ -226,9 +237,10 @@ You should have received a copy of the GNU General Public License along with thi
       break;
     case "ArrowDown":
       h = 32;
-      break;
     case "ArrowUp":
-      h = -32;
+      if(inputE === document.activeElement &&
+         0!==inputE.nextElementSibling.children.length)
+        return; 
       break;
     default:
       break SCROLL;
