--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ You should have received a copy of the GNU General Public License along with thi
       loadJSFile(tab,jsF);
     }
     gjsA.forEach((fname)=>{
-      let jsF = path.join(gjsP, fname+".js");
+      let jsF = path.join(gjsP, fname);
       loadJSFile(tab,jsF);
     });
   }
