--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@ You should have received a copy of the GNU General Public License along with thi
   }
 </style>
 <script>
-  const { ipcRenderer } = require('electron');
   const fs = require('fs');
   const path = require('path');
   const readline = require('readline');
@@ -353,7 +352,7 @@ You should have received a copy of the GNU General Public License along with thi
     return se.replace('%s',query);
   }
   function coloncommand(q){
-    ipcRenderer.send("command",q);
+    document.title = q;
   }
   function coloncommand_render(cmd){
     args = cmd.substring(1).split(/\s+/);
